MyProject/target/generated-sources/antlr4/Analizer/MyProject/compileParser.java
// Generated from compile.g4 by ANTLR 4.4
package Analizer.MyProject;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class compileParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, OR=2, NOT=3, DOUBLEPLUS=4, DOUBLEMINUS=5, COMILLA=6, MAS=7, MENOS=8, 
		POR=9, DIV=10, MAYOR=11, MENOR=12, PLUSEQ=13, MINEQ=14, DOUBLEEQ=15, NEGATE=16, 
		EQUAL=17, ILLAVE=18, RLLAVE=19, LPAR=20, RPAR=21, DOTDOT=22, SEMIDOT=23, 
		TRUE=24, FALSE=25, IF=26, ELSE=27, END=28, WHILE=29, DO=30, WRITE=31, 
		BREAK=32, FOR=33, PROGRAM=34, VAR=35, PRINTLN=36, ID=37, NUMBER=38, PRINT=39, 
		COMMENT=40, WS=41, COMP=42;
	public static final String[] tokenNames = {
		"<INVALID>", "'&&'", "'||'", "'!'", "'++'", "'--'", "'\"'", "'+'", "'-'", 
		"'*'", "'/'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'='", "'{'", 
		"'}'", "'('", "')'", "':'", "';'", "'true'", "'false'", "'if'", "'else'", 
		"'end'", "'while'", "'do'", "'write'", "'break'", "'for'", "'program'", 
		"'var'", "'println'", "ID", "NUMBER", "' System.out.println '", "COMMENT", 
		"WS", "COMP"
	};
	public static final int
		RULE_program = 0, RULE_analizer = 1, RULE_if_statement = 2, RULE_do_statement = 3, 
		RULE_for_statement = 4, RULE_vardec = 5, RULE_varasig = 6, RULE_println = 7, 
		RULE_logicexpr = 8, RULE_comprex = 9, RULE_comparop = 10, RULE_arithmetic_expr = 11, 
		RULE_numeric_result = 12, RULE_logical_ent = 13, RULE_numeric_ent = 14;
	public static final String[] ruleNames = {
		"program", "analizer", "if_statement", "do_statement", "for_statement", 
		"vardec", "varasig", "println", "logicexpr", "comprex", "comparop", "arithmetic_expr", 
		"numeric_result", "logical_ent", "numeric_ent"
	};

	@Override
	public String getGrammarFileName() { return "compile.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public compileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(compileParser.ID, 0); }
		public AnalizerContext analizer(int i) {
			return getRuleContext(AnalizerContext.class,i);
		}
		public List<AnalizerContext> analizer() {
			return getRuleContexts(AnalizerContext.class);
		}
		public TerminalNode RLLAVE() { return getToken(compileParser.RLLAVE, 0); }
		public TerminalNode ILLAVE() { return getToken(compileParser.ILLAVE, 0); }
		public TerminalNode PROGRAM() { return getToken(compileParser.PROGRAM, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30); match(PROGRAM);
			setState(31); match(ID);
			setState(32); match(ILLAVE);
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MENOS) | (1L << EQUAL) | (1L << LPAR) | (1L << IF) | (1L << DO) | (1L << FOR) | (1L << VAR) | (1L << PRINTLN) | (1L << ID) | (1L << NUMBER))) != 0)) {
				{
				{
				setState(33); analizer();
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(39); match(RLLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnalizerContext extends ParserRuleContext {
		public Do_statementContext do_statement() {
			return getRuleContext(Do_statementContext.class,0);
		}
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public PrintlnContext println() {
			return getRuleContext(PrintlnContext.class,0);
		}
		public Arithmetic_exprContext arithmetic_expr() {
			return getRuleContext(Arithmetic_exprContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public Numeric_resultContext numeric_result() {
			return getRuleContext(Numeric_resultContext.class,0);
		}
		public VarasigContext varasig() {
			return getRuleContext(VarasigContext.class,0);
		}
		public AnalizerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_analizer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).enterAnalizer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).exitAnalizer(this);
		}
	}

	public final AnalizerContext analizer() throws RecognitionException {
		AnalizerContext _localctx = new AnalizerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_analizer);
		try {
			setState(49);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(41); vardec();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(42); varasig();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(43); arithmetic_expr(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(44); numeric_result();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(45); if_statement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(46); do_statement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(47); for_statement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(48); println();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_statementContext extends ParserRuleContext {
		public TerminalNode SEMIDOT() { return getToken(compileParser.SEMIDOT, 0); }
		public TerminalNode IF() { return getToken(compileParser.IF, 0); }
		public List<Numeric_entContext> numeric_ent() {
			return getRuleContexts(Numeric_entContext.class);
		}
		public TerminalNode MAYOR() { return getToken(compileParser.MAYOR, 0); }
		public Numeric_entContext numeric_ent(int i) {
			return getRuleContext(Numeric_entContext.class,i);
		}
		public TerminalNode RLLAVE() { return getToken(compileParser.RLLAVE, 0); }
		public TerminalNode LPAR() { return getToken(compileParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(compileParser.RPAR, 0); }
		public TerminalNode ILLAVE() { return getToken(compileParser.ILLAVE, 0); }
		public If_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).enterIf_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).exitIf_statement(this);
		}
	}

	public final If_statementContext if_statement() throws RecognitionException {
		If_statementContext _localctx = new If_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_if_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); match(IF);
			setState(52); match(LPAR);
			setState(53); numeric_ent();
			setState(54); match(MAYOR);
			setState(55); numeric_ent();
			setState(56); match(RPAR);
			setState(57); match(ILLAVE);
			setState(58); numeric_ent();
			setState(59); match(SEMIDOT);
			setState(60); match(RLLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Do_statementContext extends ParserRuleContext {
		public TerminalNode SEMIDOT() { return getToken(compileParser.SEMIDOT, 0); }
		public TerminalNode EQUAL() { return getToken(compileParser.EQUAL, 0); }
		public List<Numeric_entContext> numeric_ent() {
			return getRuleContexts(Numeric_entContext.class);
		}
		public TerminalNode DO() { return getToken(compileParser.DO, 0); }
		public Numeric_entContext numeric_ent(int i) {
			return getRuleContext(Numeric_entContext.class,i);
		}
		public TerminalNode PRINTLN() { return getToken(compileParser.PRINTLN, 0); }
		public TerminalNode RLLAVE() { return getToken(compileParser.RLLAVE, 0); }
		public TerminalNode LPAR() { return getToken(compileParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(compileParser.RPAR, 0); }
		public TerminalNode ILLAVE() { return getToken(compileParser.ILLAVE, 0); }
		public TerminalNode WHILE() { return getToken(compileParser.WHILE, 0); }
		public Do_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_do_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).enterDo_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).exitDo_statement(this);
		}
	}

	public final Do_statementContext do_statement() throws RecognitionException {
		Do_statementContext _localctx = new Do_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_do_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); match(DO);
			setState(63); match(ILLAVE);
			setState(64); match(PRINTLN);
			setState(65); numeric_ent();
			setState(66); match(SEMIDOT);
			setState(67); match(RLLAVE);
			setState(68); match(WHILE);
			setState(69); match(LPAR);
			setState(70); numeric_ent();
			setState(71); match(EQUAL);
			setState(72); numeric_ent();
			setState(73); match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_statementContext extends ParserRuleContext {
		public List<TerminalNode> SEMIDOT() { return getTokens(compileParser.SEMIDOT); }
		public TerminalNode MAYOR() { return getToken(compileParser.MAYOR, 0); }
		public Numeric_entContext numeric_ent(int i) {
			return getRuleContext(Numeric_entContext.class,i);
		}
		public TerminalNode FOR() { return getToken(compileParser.FOR, 0); }
		public TerminalNode DOUBLEEQ() { return getToken(compileParser.DOUBLEEQ, 0); }
		public TerminalNode ID(int i) {
			return getToken(compileParser.ID, i);
		}
		public TerminalNode LPAR() { return getToken(compileParser.LPAR, 0); }
		public TerminalNode ILLAVE() { return getToken(compileParser.ILLAVE, 0); }
		public List<TerminalNode> ID() { return getTokens(compileParser.ID); }
		public List<Numeric_entContext> numeric_ent() {
			return getRuleContexts(Numeric_entContext.class);
		}
		public TerminalNode SEMIDOT(int i) {
			return getToken(compileParser.SEMIDOT, i);
		}
		public TerminalNode DOUBLEPLUS() { return getToken(compileParser.DOUBLEPLUS, 0); }
		public TerminalNode COMILLA(int i) {
			return getToken(compileParser.COMILLA, i);
		}
		public TerminalNode PRINTLN() { return getToken(compileParser.PRINTLN, 0); }
		public List<TerminalNode> COMILLA() { return getTokens(compileParser.COMILLA); }
		public TerminalNode RLLAVE() { return getToken(compileParser.RLLAVE, 0); }
		public TerminalNode RPAR() { return getToken(compileParser.RPAR, 0); }
		public For_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).enterFor_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).exitFor_statement(this);
		}
	}

	public final For_statementContext for_statement() throws RecognitionException {
		For_statementContext _localctx = new For_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_for_statement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(75); match(FOR);
			setState(76); match(LPAR);
			setState(78); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(77); numeric_ent();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(80); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(82); match(ID);
			setState(83); match(MAYOR);
			setState(84); numeric_ent();
			setState(85); match(SEMIDOT);
			setState(86); match(ID);
			setState(87); match(DOUBLEEQ);
			setState(88); numeric_ent();
			setState(89); match(SEMIDOT);
			setState(90); match(ID);
			setState(91); match(DOUBLEPLUS);
			setState(92); match(RPAR);
			setState(93); match(ILLAVE);
			setState(94); match(PRINTLN);
			setState(95); match(COMILLA);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(96); match(ID);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102); match(COMILLA);
			setState(103); match(SEMIDOT);
			setState(104); match(RLLAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardecContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(compileParser.ID, 0); }
		public TerminalNode SEMIDOT() { return getToken(compileParser.SEMIDOT, 0); }
		public TerminalNode VAR() { return getToken(compileParser.VAR, 0); }
		public VardecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).enterVardec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).exitVardec(this);
		}
	}

	public final VardecContext vardec() throws RecognitionException {
		VardecContext _localctx = new VardecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_vardec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(VAR);
			setState(107); match(ID);
			setState(108); match(SEMIDOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarasigContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(compileParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(compileParser.EQUAL, 0); }
		public TerminalNode SEMIDOT() { return getToken(compileParser.SEMIDOT, 0); }
		public TerminalNode NUMBER() { return getToken(compileParser.NUMBER, 0); }
		public VarasigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varasig; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).enterVarasig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).exitVarasig(this);
		}
	}

	public final VarasigContext varasig() throws RecognitionException {
		VarasigContext _localctx = new VarasigContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varasig);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110); match(ID);
			setState(111); match(EQUAL);
			setState(112); match(NUMBER);
			setState(113); match(SEMIDOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintlnContext extends ParserRuleContext {
		public TerminalNode SEMIDOT() { return getToken(compileParser.SEMIDOT, 0); }
		public TerminalNode PRINTLN() { return getToken(compileParser.PRINTLN, 0); }
		public TerminalNode NUMBER() { return getToken(compileParser.NUMBER, 0); }
		public PrintlnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_println; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).enterPrintln(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).exitPrintln(this);
		}
	}

	public final PrintlnContext println() throws RecognitionException {
		PrintlnContext _localctx = new PrintlnContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_println);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(PRINTLN);
			setState(116); match(NUMBER);
			setState(117); match(SEMIDOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicexprContext extends ParserRuleContext {
		public Logical_entContext logical_ent() {
			return getRuleContext(Logical_entContext.class,0);
		}
		public TerminalNode NOT() { return getToken(compileParser.NOT, 0); }
		public LogicexprContext logicexpr(int i) {
			return getRuleContext(LogicexprContext.class,i);
		}
		public TerminalNode AND() { return getToken(compileParser.AND, 0); }
		public ComprexContext comprex() {
			return getRuleContext(ComprexContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(compileParser.LPAR, 0); }
		public List<LogicexprContext> logicexpr() {
			return getRuleContexts(LogicexprContext.class);
		}
		public TerminalNode RPAR() { return getToken(compileParser.RPAR, 0); }
		public TerminalNode OR() { return getToken(compileParser.OR, 0); }
		public LogicexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).enterLogicexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).exitLogicexpr(this);
		}
	}

	public final LogicexprContext logicexpr() throws RecognitionException {
		return logicexpr(0);
	}

	private LogicexprContext logicexpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LogicexprContext _localctx = new LogicexprContext(_ctx, _parentState);
		LogicexprContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_logicexpr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(120); comprex();
				}
				break;
			case 2:
				{
				setState(121); match(LPAR);
				setState(122); logicexpr(0);
				setState(123); match(RPAR);
				}
				break;
			case 3:
				{
				setState(125); logical_ent();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(139);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(137);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new LogicexprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logicexpr);
						setState(128);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(129); match(AND);
						setState(130); logicexpr(7);
						}
						break;
					case 2:
						{
						_localctx = new LogicexprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logicexpr);
						setState(131);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(132); match(OR);
						setState(133); logicexpr(6);
						}
						break;
					case 3:
						{
						_localctx = new LogicexprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logicexpr);
						setState(134);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(135); match(NOT);
						setState(136); logicexpr(5);
						}
						break;
					}
					} 
				}
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ComprexContext extends ParserRuleContext {
		public List<ComparopContext> comparop() {
			return getRuleContexts(ComparopContext.class);
		}
		public ComparopContext comparop(int i) {
			return getRuleContext(ComparopContext.class,i);
		}
		public TerminalNode LPAR() { return getToken(compileParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(compileParser.RPAR, 0); }
		public TerminalNode COMP() { return getToken(compileParser.COMP, 0); }
		public ComprexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comprex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).enterComprex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).exitComprex(this);
		}
	}

	public final ComprexContext comprex() throws RecognitionException {
		ComprexContext _localctx = new ComprexContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_comprex);
		try {
			setState(150);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142); comparop();
				setState(143); match(COMP);
				setState(144); comparop();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(146); match(LPAR);
				setState(147); comparop();
				setState(148); match(RPAR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparopContext extends ParserRuleContext {
		public Arithmetic_exprContext arithmetic_expr() {
			return getRuleContext(Arithmetic_exprContext.class,0);
		}
		public ComparopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).enterComparop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).exitComparop(this);
		}
	}

	public final ComparopContext comparop() throws RecognitionException {
		ComparopContext _localctx = new ComparopContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_comparop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); arithmetic_expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arithmetic_exprContext extends ParserRuleContext {
		public TerminalNode MENOS() { return getToken(compileParser.MENOS, 0); }
		public Numeric_entContext numeric_ent() {
			return getRuleContext(Numeric_entContext.class,0);
		}
		public List<Arithmetic_exprContext> arithmetic_expr() {
			return getRuleContexts(Arithmetic_exprContext.class);
		}
		public TerminalNode MAS() { return getToken(compileParser.MAS, 0); }
		public TerminalNode LPAR() { return getToken(compileParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(compileParser.RPAR, 0); }
		public TerminalNode POR() { return getToken(compileParser.POR, 0); }
		public Arithmetic_exprContext arithmetic_expr(int i) {
			return getRuleContext(Arithmetic_exprContext.class,i);
		}
		public TerminalNode DIV() { return getToken(compileParser.DIV, 0); }
		public Arithmetic_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).enterArithmetic_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compileListener ) ((compileListener)listener).exitArithmetic_expr(this);
		}
	}

	public final Arithmetic_exprContext arithmetic_expr() throws RecognitionException {
		return arithmetic_expr(0);
	}

	private Arithmetic_exprContext arithmetic_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Arithmetic_exprContext _localctx = new Arithmetic_exprContext(_ctx, _parentState);
		Arithmetic_exprContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_arithmetic_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			switch (_input.LA(1)) {
			case MENOS:
				{
